--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "main": "index.ts",
   "scripts": {
     "preinstall": "npx only-allow yarn",
     "start": "npx ts-node index.ts"
   },
   "devDependencies": {
-    "@types/node": "latest",
-    "ts-node": "latest",
-    "typescript": "latest"
+    "@tsconfig/node16-strictest-esm": "latest",
+    "@types/node": "latest"
   }
 }
